// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectBtnField > display correctly in dark mode with an error 1`] = `
<div class="
  v-application
  v-layout
  v-layout--full-height
  v-locale--is-ltr
  v-theme--light
">
  <div class="v-application__wrap">
    <div>
      <div class="select-btn-field">
        <ul
          aria-label="Test"
          class="
            d-flex
            flex-wrap
            select-btn-field-toggle
            text-primary
            v-btn-group
            v-btn-group--density-default
            v-btn-group--horizontal
            v-btn-toggle
            v-theme--dark
          "
        >
          <li class="select-list-item">
            <button
              activeclass="text-white"
              aria-expanded="true"
              class="
                align-items-center
                d-flex
                elevation-0
                justify-start
                mr-0
                mr-2
                py-2
                text-error
                v-btn
                v-btn--density-default
                v-btn--flat
                v-btn--size-default
                v-btn--variant-outlined
                v-theme--dark
              "
              label=""
              style="height: auto; min-height: 40px;"
              type="button"
              value="test1"
            >
              <span class="v-btn__overlay"></span>
              <span class="v-btn__underlay"></span>
              <!---->
              <span
                class="v-btn__content"
                data-no-activator=""
              >
                <span class="text-body-1">
                  Test 1
                </span>
                <i
                  aria-hidden="true"
                  aria-label="Sélectionné"
                  class="
                    M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
                    flex-shrink-0
                    mdi
                    ml-1
                    notranslate
                    text-white
                    v-icon
                    v-icon--size-default
                    v-theme--dark
                  "
                  role="img"
                  style="visibility: hidden;"
                ></i>
              </span>
              <!---->
              <!---->
            </button>
          </li>
          <li class="select-list-item">
            <button
              activeclass="text-white"
              aria-expanded="true"
              class="
                align-items-center
                d-flex
                elevation-0
                justify-start
                mr-0
                mr-2
                py-2
                text-error
                v-btn
                v-btn--density-default
                v-btn--flat
                v-btn--size-default
                v-btn--variant-outlined
                v-theme--dark
              "
              label=""
              style="height: auto; min-height: 40px;"
              type="button"
              value="test2"
            >
              <span class="v-btn__overlay"></span>
              <span class="v-btn__underlay"></span>
              <!---->
              <span
                class="v-btn__content"
                data-no-activator=""
              >
                <span class="text-body-1">
                  Test 2
                </span>
                <i
                  aria-hidden="true"
                  aria-label="Sélectionné"
                  class="
                    M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
                    flex-shrink-0
                    mdi
                    ml-1
                    notranslate
                    text-white
                    v-icon
                    v-icon--size-default
                    v-theme--dark
                  "
                  role="img"
                  style="visibility: hidden;"
                ></i>
              </span>
              <!---->
              <!---->
            </button>
          </li>
        </ul>
        <p class="
          mb-0
          mt-2
          opacity-100
          px-3
          text-error
          theme--light
          v-messages
        ">
          Test
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectBtnField > display correctly with an error 1`] = `
<div class="
  form-input
  select-btn-field
">
  <ul
    aria-label="Test"
    class="
      d-flex
      d-flex
      flex-column
      flex-wrap
      select-btn-field-toggle
      text-primary
      v-btn-group
      v-btn-group--density-default
      v-btn-group--horizontal
      v-btn-toggle
      v-theme--light
    "
  >
    <li class="select-list-item">
      <button
        activeclass="text-white"
        aria-expanded="true"
        class="
          align-items-center
          d-flex
          elevation-0
          justify-start
          mr-0
          mr-0
          py-2
          text-error
          v-btn
          v-btn--density-default
          v-btn--flat
          v-btn--size-default
          v-btn--variant-outlined
          v-theme--light
        "
        label=""
        style="height: auto; min-height: 40px;"
        type="button"
        value="test"
      >
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <span class="text-body-1">
            Test
          </span>
          <i
            aria-hidden="true"
            aria-label="Sélectionné"
            class="
              M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
              flex-shrink-0
              mdi
              ml-1
              notranslate
              text-white
              v-icon
              v-icon--size-default
              v-theme--light
            "
            role="img"
            style="visibility: hidden;"
          ></i>
        </span>
        <!---->
        <!---->
      </button>
    </li>
    <li class="select-list-item">
      <button
        activeclass="text-white"
        aria-expanded="true"
        class="
          align-items-center
          d-flex
          elevation-0
          justify-start
          mr-0
          mr-0
          py-2
          text-error
          v-btn
          v-btn--density-default
          v-btn--flat
          v-btn--size-default
          v-btn--variant-outlined
          v-theme--light
        "
        label=""
        style="height: auto; min-height: 40px;"
        type="button"
        value="test2"
      >
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <span class="text-body-1">
            Test 2
          </span>
          <i
            aria-hidden="true"
            aria-label="Sélectionné"
            class="
              M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
              flex-shrink-0
              mdi
              ml-1
              notranslate
              text-white
              v-icon
              v-icon--size-default
              v-theme--light
            "
            role="img"
            style="visibility: hidden;"
          ></i>
        </span>
        <!---->
        <!---->
      </button>
    </li>
    <li class="select-list-item">
      <button
        activeclass="text-white"
        aria-expanded="true"
        class="
          align-items-center
          d-flex
          elevation-0
          justify-start
          mr-0
          mr-0
          py-2
          text-error
          v-btn
          v-btn--density-default
          v-btn--flat
          v-btn--size-default
          v-btn--variant-outlined
          v-theme--light
        "
        label=""
        style="height: auto; min-height: 40px;"
        type="button"
        value="test3"
      >
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <span class="text-body-1">
            Test 3
          </span>
          <i
            aria-hidden="true"
            aria-label="Sélectionné"
            class="
              M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
              flex-shrink-0
              mdi
              ml-1
              notranslate
              text-white
              v-icon
              v-icon--size-default
              v-theme--light
            "
            role="img"
            style="visibility: hidden;"
          ></i>
        </span>
        <!---->
        <!---->
      </button>
    </li>
  </ul>
  <p class="
    mb-0
    mt-2
    opacity-100
    px-3
    text-error
    theme--light
    v-messages
  ">
    Test
  </p>
</div>
`;

exports[`SelectBtnField > display correctly with in dark mode with an hint 1`] = `
<div class="
  v-application
  v-layout
  v-layout--full-height
  v-locale--is-ltr
  v-theme--light
">
  <div class="v-application__wrap">
    <div>
      <div class="select-btn-field">
        <ul
          aria-label="Test"
          class="
            d-flex
            flex-wrap
            select-btn-field-toggle
            text-primary
            v-btn-group
            v-btn-group--density-default
            v-btn-group--horizontal
            v-btn-toggle
            v-theme--dark
          "
        >
          <li class="select-list-item">
            <button
              activeclass="text-white"
              aria-expanded="true"
              class="
                align-items-center
                d-flex
                elevation-0
                justify-start
                mr-0
                mr-2
                py-2
                v-btn
                v-btn--density-default
                v-btn--flat
                v-btn--size-default
                v-btn--variant-outlined
                v-theme--dark
              "
              label=""
              style="height: auto; min-height: 40px;"
              type="button"
              value="test1"
            >
              <span class="v-btn__overlay"></span>
              <span class="v-btn__underlay"></span>
              <!---->
              <span
                class="v-btn__content"
                data-no-activator=""
              >
                <span class="text-body-1">
                  Test 1
                </span>
                <i
                  aria-hidden="true"
                  aria-label="Sélectionné"
                  class="
                    M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
                    flex-shrink-0
                    mdi
                    ml-1
                    notranslate
                    text-white
                    v-icon
                    v-icon--size-default
                    v-theme--dark
                  "
                  role="img"
                  style="visibility: hidden;"
                ></i>
              </span>
              <!---->
              <!---->
            </button>
          </li>
          <li class="select-list-item">
            <button
              activeclass="text-white"
              aria-expanded="true"
              class="
                align-items-center
                d-flex
                elevation-0
                justify-start
                mr-0
                mr-2
                py-2
                v-btn
                v-btn--density-default
                v-btn--flat
                v-btn--size-default
                v-btn--variant-outlined
                v-theme--dark
              "
              label=""
              style="height: auto; min-height: 40px;"
              type="button"
              value="test2"
            >
              <span class="v-btn__overlay"></span>
              <span class="v-btn__underlay"></span>
              <!---->
              <span
                class="v-btn__content"
                data-no-activator=""
              >
                <span class="text-body-1">
                  Test 2
                </span>
                <i
                  aria-hidden="true"
                  aria-label="Sélectionné"
                  class="
                    M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
                    flex-shrink-0
                    mdi
                    ml-1
                    notranslate
                    text-white
                    v-icon
                    v-icon--size-default
                    v-theme--dark
                  "
                  role="img"
                  style="visibility: hidden;"
                ></i>
              </span>
              <!---->
              <!---->
            </button>
          </li>
        </ul>
        <p class="
          mb-0
          mt-2
          opacity-100
          px-3
          theme--light
          v-messages
        ">
          Test
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectBtnField > render correctly in multiple mode 1`] = `
<div class="
  form-input
  select-btn-field
">
  <ul
    aria-label="Test"
    class="
      d-flex
      d-flex
      flex-column
      flex-wrap
      select-btn-field-toggle
      text-primary
      v-btn-group
      v-btn-group--density-default
      v-btn-group--horizontal
      v-btn-toggle
      v-theme--light
    "
  >
    <li class="select-list-item">
      <button
        activeclass="text-white"
        aria-expanded="true"
        class="
          align-items-center
          d-flex
          elevation-0
          justify-start
          mr-0
          mr-0
          py-2
          v-btn
          v-btn--density-default
          v-btn--flat
          v-btn--size-default
          v-btn--variant-outlined
          v-theme--light
        "
        label=""
        style="height: auto; min-height: 40px;"
        type="button"
        value="test"
      >
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <span class="text-body-1">
            Test
          </span>
          <i
            aria-hidden="true"
            aria-label="Sélectionné"
            class="
              M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
              flex-shrink-0
              mdi
              ml-1
              notranslate
              text-white
              v-icon
              v-icon--size-default
              v-theme--light
            "
            role="img"
            style="visibility: hidden;"
          ></i>
        </span>
        <!---->
        <!---->
      </button>
    </li>
    <li class="select-list-item">
      <button
        activeclass="text-white"
        aria-expanded="true"
        class="
          align-items-center
          d-flex
          elevation-0
          justify-start
          mr-0
          mr-0
          py-2
          v-btn
          v-btn--density-default
          v-btn--flat
          v-btn--size-default
          v-btn--variant-outlined
          v-theme--light
        "
        label=""
        style="height: auto; min-height: 40px;"
        type="button"
        value=""
      >
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <span class="text-body-1">
            Test 2
          </span>
          <i
            aria-hidden="true"
            aria-label="Sélectionné"
            class="
              M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
              flex-shrink-0
              mdi
              ml-1
              notranslate
              text-white
              v-icon
              v-icon--size-default
              v-theme--light
            "
            role="img"
            style="visibility: hidden;"
          ></i>
        </span>
        <!---->
        <!---->
      </button>
    </li>
    <li class="select-list-item">
      <button
        activeclass="text-white"
        aria-expanded="true"
        class="
          align-items-center
          d-flex
          elevation-0
          justify-start
          mr-0
          mr-0
          py-2
          v-btn
          v-btn--density-default
          v-btn--flat
          v-btn--size-default
          v-btn--variant-outlined
          v-theme--light
        "
        label=""
        style="height: auto; min-height: 40px;"
        type="button"
        value="test3"
      >
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <span class="text-body-1">
            Test 3
          </span>
          <i
            aria-hidden="true"
            aria-label="Sélectionné"
            class="
              M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
              flex-shrink-0
              mdi
              ml-1
              notranslate
              text-white
              v-icon
              v-icon--size-default
              v-theme--light
            "
            role="img"
            style="visibility: hidden;"
          ></i>
        </span>
        <!---->
        <!---->
      </button>
    </li>
  </ul>
  <p class="
    mb-0
    mt-2
    opacity-100
    px-3
    theme--light
    v-messages
  ">
    Test
  </p>
</div>
`;

exports[`SelectBtnField > renders correctly 1`] = `
<div class="
  form-input
  select-btn-field
">
  <ul class="
    d-flex
    d-flex
    flex-column
    flex-wrap
    select-btn-field-toggle
    text-primary
    v-btn-group
    v-btn-group--density-default
    v-btn-group--horizontal
    v-btn-toggle
    v-theme--light
  "></ul>
  <!-- v-if -->
</div>
`;

exports[`SelectBtnField > renders correctly with props 1`] = `
<div class="
  form-input
  select-btn-field
">
  <ul
    aria-label="Test"
    class="
      d-flex
      d-flex
      flex-column
      flex-wrap
      select-btn-field-toggle
      text-primary
      v-btn-group
      v-btn-group--density-default
      v-btn-group--horizontal
      v-btn-toggle
      v-theme--light
    "
  >
    <li class="select-list-item">
      <button
        activeclass="text-white"
        aria-expanded="true"
        class="
          align-items-center
          d-flex
          elevation-0
          justify-start
          mr-0
          mr-0
          py-2
          v-btn
          v-btn--density-default
          v-btn--flat
          v-btn--size-default
          v-btn--variant-outlined
          v-theme--light
        "
        label=""
        style="height: auto; min-height: 40px;"
        type="button"
        value="test"
      >
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <span class="text-body-1">
            Test
          </span>
          <i
            aria-hidden="true"
            aria-label="Sélectionné"
            class="
              M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
              flex-shrink-0
              mdi
              ml-1
              notranslate
              text-white
              v-icon
              v-icon--size-default
              v-theme--light
            "
            role="img"
            style="visibility: hidden;"
          ></i>
        </span>
        <!---->
        <!---->
      </button>
    </li>
    <li class="select-list-item">
      <button
        activeclass="text-white"
        aria-expanded="true"
        class="
          align-items-center
          d-flex
          elevation-0
          justify-start
          mr-0
          mr-0
          py-2
          v-btn
          v-btn--density-default
          v-btn--flat
          v-btn--size-default
          v-btn--variant-outlined
          v-theme--light
        "
        label=""
        style="height: auto; min-height: 40px;"
        type="button"
        value=""
      >
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <span class="text-body-1">
            Test 2
          </span>
          <i
            aria-hidden="true"
            aria-label="Sélectionné"
            class="
              M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
              flex-shrink-0
              mdi
              ml-1
              notranslate
              text-white
              v-icon
              v-icon--size-default
              v-theme--light
            "
            role="img"
            style="visibility: hidden;"
          ></i>
        </span>
        <!---->
        <!---->
      </button>
    </li>
    <li class="select-list-item">
      <button
        activeclass="text-white"
        aria-expanded="true"
        class="
          align-items-center
          d-flex
          elevation-0
          justify-start
          mr-0
          mr-0
          py-2
          v-btn
          v-btn--density-default
          v-btn--flat
          v-btn--size-default
          v-btn--variant-outlined
          v-theme--light
        "
        label=""
        style="height: auto; min-height: 40px;"
        type="button"
        value="test3"
      >
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <span class="text-body-1">
            Test 3
          </span>
          <i
            aria-hidden="true"
            aria-label="Sélectionné"
            class="
              M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
              flex-shrink-0
              mdi
              ml-1
              notranslate
              text-white
              v-icon
              v-icon--size-default
              v-theme--light
            "
            role="img"
            style="visibility: hidden;"
          ></i>
        </span>
        <!---->
        <!---->
      </button>
    </li>
  </ul>
  <p class="
    mb-0
    mt-2
    opacity-100
    px-3
    theme--light
    v-messages
  ">
    Test
  </p>
</div>
`;
